testdata/errors/import_nonconst_top/main.spy
from lib import f

print(f(5))
